// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases describe 1`] = `
"This is a module
  This is a group
    A unit in group ✔
    This is a nested group
      A unit in nested group ✔
"
`;

exports[`cases describe-default 1`] = `
"main
  group1
    test1 ✔
    group2
      test1 ✔
"
`;

exports[`cases invalid group value type 1`] = `
"main.group1: should have object value at line 2 col 3
"
`;

exports[`cases invalid mixin type 1`] = `
"main.test1@mixin: req1 should be object at line 3 col 29
"
`;

exports[`cases invalid prop key 1`] = `
"main: prop 'test a' should satify rules of variable name at line 2 col 3
"
`;

exports[`cases invalid run options 1`] = `
"main
  fail# invalid unit.skip
  main.test1.run.skip: should be boolean value
  fail# invalid unit.delay
  main.test2.run.delay: should be integer value
  fail# invalid unit.retry
  main.test3.run.retry: should be object value
  fail# invalid unit.retry.stop
  main.test4.run.retry.stop: should be boolean value
  fail# invalid unit.retry.stop
  main.test4.run.retry.stop: should be boolean value
  fail# invalid unit.loop.items
  main.test5.run.loop.items: should be array value
"
`;

exports[`cases invalid run type 1`] = `
"main.test1: should be object value at line 5 col 5
"
`;

exports[`cases invalid unit client type 1`] = `
"main.test1@client: should have string or object value at line 2 col 13
"
`;

exports[`cases invalid unit mixin 1`] = `
"main.test1@mixin: reqx is miss at line 3 col 29
"
`;

exports[`cases invalid unit mixin type 1`] = `
"main.test1@mixin: should have string or array value at line 3 col 29
"
`;

exports[`cases invalid unit value type 1`] = `
"main.test1: should have object value at line 2 col 3
"
`;

exports[`cases merge mixin 1`] = `
"main
  single mixin ✔
  multiple mixin ✔
  omit mixin if exist prop ✔
  nest mixin ✔
"
`;

exports[`cases run --reset 1`] = `
"main
  vars ✔
  dump ✔
  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    },
    \\"run\\": {
      \\"dump\\": true
    }
  }
  skip ⌾
  delay ✔
  fail# retry ✘
  main.test3.res.v1: b ≠ a
  fail# retry ✘
  main.test3.res.v1: b ≠ a
  fail# retry ✘
  main.test3.res.v1: b ≠ a
"
`;

exports[`cases run 1`] = `
"main
  vars ✔
  skip ⌾
  delay
    test2 ✔
  fail# retry
    test1 ✔
    test3 ✘
    test1 ✔
    test3 ✘
    test1 ✔
    test3 ✘
  loop
    test1 ✔
    test4 ✔
    test1 ✔
    test4 ✔

1. test3(main.group3.test3)
   main.group3.test3.res.v1: b ≠ a

2. test3(main.group3.test3)
   main.group3.test3.res.v1: b ≠ a

3. test3(main.group3.test3)
   main.group3.test3.res.v1: b ≠ a

"
`;

exports[`cases run group 1`] = `
"main
  vars ✔
  dump ✔
  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    },
    \\"run\\": {
      \\"dump\\": true
    }
  }
  skip ⌾
  delay ✔
  fail# retry ✘
  fail# retry ✘
  fail# retry ✘
  loop ✔
  loop ✔

1. fail# retry(main.test3)
   main.test3.res.v1: b ≠ a

2. fail# retry(main.test3)
   main.test3.res.v1: b ≠ a

3. fail# retry(main.test3)
   main.test3.res.v1: b ≠ a

"
`;
